secyour-webiste/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secyour-service
spec:
  selector:
    app: secyour
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
