secyour-webiste/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secyour-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: secyour.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secyour-service
            port:
              number: 80
  # Add the new host block below
  - host: www.secyour.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secyour-service
            port:
              number: 80
